msp-terraform-test/dev/vpc/routing.tf
resource "aws_route" "private_nat_1" {
  route_table_id              = aws_route_table.pr_route_table.id
  destination_cidr_block      = "0.0.0.0/0"
  nat_gateway_id              = aws_nat_gateway.nat_gateway_1.id
}

resource "aws_route" "public_igw_1" {
  route_table_id              = aws_route_table.pu_route_table.id
  destination_cidr_block      = "0.0.0.0/0"
  gateway_id                  = aws_internet_gateway.igw.id
}
